fix: updated user creation to integrate address
